--- a/public/jav.html
+++ b/public/jav.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <ul>
-        <li>lmao</li>
-        <li>gg</li>
-        <li>yy</li>
+        <li>con cac</li>
+        <li>ngu nguoi</li>
+        <li>ngu lon</li>
     </ul>
 </body>
 </html>
